style: :lipstick: fixed overflow of the bg on consent manger dialog

--- a/packages/elements/src/react/consent-manager/consent-manager-dialog.css
+++ b/packages/elements/src/react/consent-manager/consent-manager-dialog.css
@@ -15,12 +15,19 @@
 }
 
 .consent-manager-dialog-root {
+
+	--kf-card-padding: 1.5rem;
+	--kf-card-radius: 1.25rem;
+	--kf-card-gap: 0.375rem;
+
 	position: fixed;
 	inset: 0px;
 	z-index: 999999999;
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	border-radius: var(--kf-card-radius);
+	background:transparent;
 }
 
 .consent-manager-dialog-container {
